배달주문 관련 코드에서 배달주문과 관련없는 코드 정리